@@ -2,13 +2,8 @@ package me.dreamerzero.chatregulator;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
-import java.nio.file.Paths;
-import java.util.UUID;
-
-import com.velocitypowered.api.proxy.Player;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
@@ -17,24 +12,22 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import me.dreamerzero.chatregulator.config.Configuration;
+import me.dreamerzero.chatregulator.utils.TestsUtils;
+
 import static me.dreamerzero.chatregulator.enums.InfractionType.*;
 
-public class InfractionPlayerTest {
-    static InfractionPlayer player;
+public final class InfractionPlayerTest {
 
     @BeforeAll
     static void createPlayer(){
         Logger logger = LoggerFactory.getLogger(InfractionPlayerTest.class);
-        Configuration.loadConfig(Paths.get("build", "reports", "tests", "test"), logger);
-        Player p = mock(Player.class);
-        when(p.getUsername()).thenReturn("4drian3d");
-        when(p.getUniqueId()).thenReturn(UUID.randomUUID());
-        player = InfractionPlayer.get(p);
+        Configuration.loadConfig(Path.of("build", "reports", "tests", "test"), logger);
     }
 
     @Test
     @DisplayName("Player Violation Count")
     void countTest(){
+        InfractionPlayer player = InfractionPlayer.get(TestsUtils.createNormalPlayer("4drian3d"));
         ViolationCount count = player.getViolations();
 
         count.addViolation(REGULAR);
@@ -47,11 +40,7 @@ public class InfractionPlayerTest {
 
         assertEquals(0, count.getCount(REGULAR));
         assertEquals(0, count.getCount(FLOOD));
-    }
 
-    @Test
-    @DisplayName("General Tests")
-    void generalTest(){
         assertTrue(player.isOnline());
 
         assertEquals("4drian3d", player.username());
