@@ -1,6 +1,6 @@
 package me.dreamerzero.chatregulator.modules;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
@@ -12,11 +12,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import me.dreamerzero.chatregulator.config.Configuration;
 
-public class ReplacerTest {
+public final class ReplacerTest {
     @BeforeAll
     static void loadConfig(){
         Logger logger = LoggerFactory.getLogger(ReplacerTest.class);
-        Configuration.loadConfig(Paths.get("build", "reports", "tests", "test"), logger);
+        Configuration.loadConfig(Path.of("build", "reports", "tests", "test"), logger);
     }
 
     @Test
@@ -24,9 +24,8 @@ public class ReplacerTest {
     void firstLetterUppercase(){
         String original = "peruviankkit";
         String expected = "Peruviankkit";
-        Replacer r = new Replacer();
 
-        String replaced = r.firstLetterUpercase(original);
+        String replaced = Replacer.firstLetterUpercase(original);
         assertEquals(replaced, expected);
     }
 
@@ -36,9 +35,7 @@ public class ReplacerTest {
         String original = "peruviankkit";
         String expected = "peruviankkit.";
 
-        Replacer r = new Replacer();
-
-        String replaced = r.addFinalDot(original);
+        String replaced = Replacer.addFinalDot(original);
 
         assertEquals(replaced, expected);
     }
@@ -49,9 +46,7 @@ public class ReplacerTest {
         String original = "peruviankkit";
         String expected = "Peruviankkit.";
 
-        Replacer r = new Replacer();
-
-        String replaced = r.applyFormat(original);
+        String replaced = Replacer.applyFormat(original);
 
         assertEquals(replaced, expected);
     }
